add form validation

--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -17,6 +17,7 @@ $color-accent: 			#124fb3;
 $color-footer:          #182a53;
 $color-grad-start:      #084a7c;
 $color-grad-end:        #2ba3c3;
+$color-alarm:           #e60000;
 
 /* TRANSITIONS AND ANIMATIONS */
 $delay-global: 300ms;
