--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -504,10 +504,26 @@ body {
   @media (min-width: 1024px) {
     .form {
       padding: 3em 5em; } }
+  .form__fields {
+    display: block; }
+    .form__fields::after {
+      content: '';
+      display: table;
+      clear: both; }
+  .form__wrap {
+    display: block;
+    position: relative;
+    margin: 0 auto;
+    margin-bottom: 2.5em; }
+    @media (min-width: 768px) {
+      .form__wrap {
+        float: left;
+        width: 30%;
+        margin-right: 5%; }
+        .form__wrap:last-child {
+          margin-right: 0; } }
   .form__input {
     display: block;
-    margin: 0 auto;
-    margin-bottom: 2.5em;
     width: 100%;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -542,17 +558,6 @@ body {
     .form__input:focus {
       border-color: #0099df;
       outline: none; }
-    @media (min-width: 768px) {
-      .form__input {
-        float: left;
-        width: 30%;
-        margin-right: 5%; }
-        .form__input::after {
-          content: '';
-          display: table;
-          clear: both; }
-        .form__input:last-child {
-          margin-right: 0; } }
   .form__button {
     width: 100%; }
     @media (min-width: 768px) {
@@ -561,6 +566,36 @@ body {
     @media (min-width: 1024px) {
       .form__button {
         width: 30%; } }
+
+.js-not-valide {
+  border: 1px solid #e60000;
+  color: #e60000; }
+  .js-not-valide.placeholder {
+    color: #e60000; }
+  .js-not-valide:-moz-placeholder {
+    color: #e60000; }
+  .js-not-valide:-ms-input-placeholder {
+    color: #e60000; }
+  .js-not-valide::-moz-placeholder {
+    color: #e60000; }
+  .js-not-valide::-webkit-input-placeholder {
+    color: #e60000; }
+
+.js-empty-field::after {
+  content: "Required field";
+  display: block;
+  position: absolute;
+  bottom: -1.5em;
+  font-size: 12px;
+  color: #e60000; }
+
+.js-not-email::after {
+  content: "Incorrect Email";
+  display: block;
+  position: absolute;
+  bottom: -1.5em;
+  font-size: 12px;
+  color: #e60000; }
 
 .button {
   padding: 0.7em;
