--- a/src/sass/blocks/_form.scss
+++ b/src/sass/blocks/_form.scss
@@ -15,11 +15,32 @@
 	@include desktop {
 		padding: 3em 5em;
 	}
+
+	&__fields {
+		display: block;
+
+		@include clearfix;
+	}
+
+	&__wrap {
+		display: block;
+		position: relative;
+		margin: 0 auto;
+		margin-bottom: 2.5em;
+
+		@include tablet {
+			float: left;
+			width: 30%;
+			margin-right: 5%;
+	
+			&:last-child {
+				margin-right: 0;
+			}
+		}
+	}
 	
 	&__input {
 		display: block;
-		margin: 0 auto;
-		margin-bottom: 2.5em;
 		width: 100%;
 		box-sizing: border-box;
 		padding: 0.7em 1em;
@@ -42,16 +63,6 @@
 			outline: none;
 		}
 
-		@include tablet {
-			float: left;
-			width: 30%;
-			margin-right: 5%;
-			@include clearfix {}
-
-			&:last-child {
-				margin-right: 0;
-			}
-		}
 
 	}
 
@@ -66,5 +77,37 @@
 			width: 30%;
 		}
 	}
+}
 
+.js-not-valide {
+	border: 1px solid $color-alarm;
+	color: $color-alarm;
+
+	@include placeholder {
+		color: $color-alarm;
+	}
+}
+
+.js-empty-field {
+	&::after {
+		content: "Required field";
+		display: block;
+		position: absolute;
+		bottom: -1.5em;
+
+		font-size: $font-small;
+		color: $color-alarm;
+	}
+}
+
+.js-not-email {
+	&::after {
+		content: "Incorrect Email";
+		display: block;
+		position: absolute;
+		bottom: -1.5em;
+
+		font-size: $font-small;
+		color: $color-alarm;
+	}
 }
