create success sent window

--- a/src/templates/partial/_header.html
+++ b/src/templates/partial/_header.html
@@ -27,6 +27,10 @@
             </span>
         </div>
         <button type="submit" class="button form__button">Get started!</button>
+        <div class="form__sent js-form-sent">
+            <p class="form__sent-text">Thank you!<br>Your information has been sent.</p>
+            <img src="img/form-success.png" alt="Success">
+        </div>
     </form>
 
 </header>
