--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -557,7 +557,9 @@ body {
       color: #9d9d9c; }
     .form__input:focus {
       border-color: #0099df;
-      outline: none; }
+      outline: none;
+      -webkit-transition-duration: 300ms;
+              transition-duration: 300ms; }
   .form__button {
     width: 100%; }
     @media (min-width: 768px) {
@@ -566,6 +568,25 @@ body {
     @media (min-width: 1024px) {
       .form__button {
         width: 30%; } }
+  .form__sent {
+    display: none;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    -webkit-transform: translate(50%, -50%);
+            transform: translate(50%, -50%);
+    height: 100%;
+    max-height: 15em;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    margin: 0 auto;
+    padding: 2em;
+    background-color: #ffffff;
+    border-radius: 5px;
+    -webkit-box-shadow: 5px 10px 25px 2px rgba(0, 0, 0, 0.2);
+            box-shadow: 5px 10px 25px 2px rgba(0, 0, 0, 0.2);
+    -webkit-transition-duration: 300ms;
+            transition-duration: 300ms; }
 
 .js-not-valide {
   border: 1px solid #e60000;
