--- a/src/sass/blocks/_form.scss
+++ b/src/sass/blocks/_form.scss
@@ -61,6 +61,7 @@
 		&:focus {
 			border-color: $color-secondary;
 			outline: none;
+			transition-duration: $delay-global;			
 		}
 
 
@@ -76,6 +77,23 @@
 		@include desktop {
 			width: 30%;
 		}
+	}
+
+	&__sent {
+		display: none;
+		position: absolute;
+		top: 50%;
+		right: 50%;
+		transform: translate(50%, -50%);
+		height: 100%;
+		max-height: 15em;
+		box-sizing: border-box;
+		margin: 0 auto;
+		padding: 2em;
+		background-color: $color-text-secondary;
+		border-radius: 5px;
+		box-shadow: 5px 10px 25px 2px rgba(0, 0, 0, 0.2);
+		transition-duration: $delay-global;
 	}
 }
 
