--- a/src/sass/_page.scss
+++ b/src/sass/_page.scss
@@ -3,6 +3,10 @@ body {
 }
 
 .page {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
     font-family: $font-primary;
     font-size: $font-main;
     color: $color-text-main;
