--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -4,17 +4,17 @@
 
 	&__top {
 		position: relative;
-		padding-bottom: 10em;
+		padding-bottom: 5em;
 		background-color: $color-grad-end;
 		background: linear-gradient(to right, $color-grad-start, $color-grad-end);
 		transition-duration: $delay-global;
 
 		@include tablet {
-			padding-bottom: 12em;
+			padding-bottom: 7em;
 		}
 
 		@include desktop {
-			padding-bottom: 16em;
+			padding-bottom: 8em;
 		}
 	}
 
@@ -29,19 +29,19 @@
     }
 
     &__wave_bottom {
-		bottom: 3em;
+		bottom: 0;
 		
-		@include phablet {
-			bottom: 3em;
-		}
+		// @include phablet {
+		// 	bottom: 3em;
+		// }
 
-		@include tablet {
-			bottom: 6.5em;
-		}
+		// @include tablet {
+		// 	bottom: 6.5em;
+		// }
 
-		@include desktop {
-			bottom: 9em;
-		}
+		// @include desktop {
+		// 	bottom: 9em;
+		// }
     }
 
 	&__title {
@@ -80,12 +80,12 @@
 	}
 	
 	&__bottom {
-		position: fixed;
-		bottom: 0;
-		box-sizing: border-box;
-		width: 100%;
+		// position: fixed;
+		// bottom: 0;
+		// box-sizing: border-box;
+		// width: 100%;
 		padding: 0.5em 1em;
-		z-index: 2;
+		// z-index: 2;
 		background-color: $color-footer;
 
 		font-size: 0.9em;
