--- a/src/templates/partial/_footer.html
+++ b/src/templates/partial/_footer.html
@@ -2,15 +2,8 @@
 
     <div class="footer__top">
 
-        <div class="footer__wave footer__wave_updown">
-            <svg width="100%" height="100%" class="wave"><path class="feel-the-wave"/></svg>
-            <svg width="100%" height="100%" class="wave"><path class="feel-the-wave-two"/></svg>
-        </div>
-    
-        <div class="footer__wave footer__wave_bottom">
-            <svg width="100%" height="100%" class="wave"><path class="feel-the-wave"/></svg>
-            <svg width="100%" height="100%" class="wave"><path class="feel-the-wave-two"/></svg>
-        </div> 
+        <canvas width="100" height="100" class="canvas-wave footer__wave footer__wave_updown"></canvas>
+        <canvas width="100" height="100" class="canvas-wave footer__wave footer__wave_bottom"></canvas>
 
         <div class="slick footer__slick">
             <img src="img/slick_visa.png" alt="VISA" class="slick__img">
