--- a/src/templates/partial/_header.html
+++ b/src/templates/partial/_header.html
@@ -1,14 +1,7 @@
 <header class="header">
 
-    <div class="header__wave header__wave_updown">
-        <svg width="100%" height="100%" class="wave"><path class="feel-the-wave"/></svg>
-        <svg width="100%" height="100%" class="wave"><path class="feel-the-wave-two"/></svg>
-    </div>
-
-    <div class="header__wave header__wave_bottom">
-        <svg width="100%" height="100%" class="wave"><path class="feel-the-wave"/></svg>
-        <svg width="100%" height="100%" class="wave"><path class="feel-the-wave-two"/></svg>
-    </div>   
+    <canvas width="100" height="100" class="canvas-wave header__wave header__wave_updown"></canvas>
+    <canvas width="100" height="100" class="canvas-wave header__wave header__wave_bottom"></canvas>
             
     <img src="img/logo_tripplepay.svg" alt="TripplePay Logo" class="header__logo">
     <h1 class="header__title">Betting, lottery or gambling business? No problem! We're real pros at this!</h1>
