--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -19,9 +19,10 @@
 	}
 
 	&__wave {
-        position: absolute;
+		position: absolute;
+		left: 0;
         width: 100%;
-        height: 100px;
+        height: 50px;
     }
 
     &__wave_updown {
