--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -6,8 +6,9 @@
 
     &__wave {
         position: absolute;
+        left: 0;
         width: 100%;
-        height: 100px;
+        height: 50px;
     }
 
     &__wave_updown {
