--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -433,14 +433,17 @@ body {
     position: relative;
     padding: 1.5em;
     width: 160px;
+    height: 120px;
     -webkit-transition-duration: 300ms;
             transition-duration: 300ms; }
     @media (min-width: 768px) {
       .header__logo {
-        width: 180px; } }
+        width: 180px;
+        height: 135px; } }
     @media (min-width: 1024px) {
       .header__logo {
-        width: 200px; } }
+        width: 200px;
+        height: 150px; } }
   .header__title {
     margin: 0 auto;
     padding: 0 1em;
