--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -23,14 +23,17 @@
         position: relative;
         padding: 1.5em;
         width: 200px * 0.8;
+        height: 150px * 0.8;         
         transition-duration: $delay-global;
 
         @include tablet {
             width: 200px * 0.9;
+            height: 150px * 0.9;            
         }
 
         @include desktop {
             width: 200px;
+            height: 150px;
         }
     }
     
