--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -17,8 +17,8 @@
     <title>{% if title %}{{ title }}{% else %}Draft{% endif %}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-    <!-- <link rel="stylesheet" href="css/style.min.css"> -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 <body>
     
@@ -28,8 +28,8 @@
 
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-    <!-- <script src="js/app.min.js"></script> -->
-    <script defer src="js/app.js"></script>
+    <script src="js/app.min.js"></script>
+    <!-- <script defer src="js/app.js"></script> -->
 
 </body>
 </html>
