--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -26,8 +26,8 @@
 		{% block content %}{% endblock %}
 	</div>
 
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="js/app.min.js"></script>
     <!-- <script defer src="js/app.js"></script> -->
 
