change secondary font

--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -1,6 +1,6 @@
 /* FONT VARIABLES */
 $font-primary: 'Open Sans Light', sans-serif;
-$font-secondary: 'Open Sans Bold', sans-serif;
+$font-secondary: 'Clear Sans Bold', sans-serif;
 
 $font-main:     18px;
 $font-title:    40px;
