--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -375,13 +375,13 @@ template {
 
 @font-face {
   font-family: 'Open Sans Light';
-  src: url("../fonts/OpenSans-Light-webfont.woff") format("woff");
+  src: url("../fonts/OpenSans-Light.woff") format("woff");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
-  font-family: 'Open Sans Bold';
-  src: url("../fonts/OpenSans-Bold-webfont.woff") format("woff");
+  font-family: 'Clear Sans Bold';
+  src: url("../fonts/ClearSans-Bold.woff") format("woff");
   font-weight: normal;
   font-style: normal; }
 
@@ -407,11 +407,6 @@ body {
   font-family: "Open Sans Light", sans-serif;
   font-size: 18px;
   color: #3b3b3b; }
-
-.container {
-  margin: 0 auto;
-  width: 350px;
-  text-align: center; }
 
 .header {
   position: relative;
@@ -447,8 +442,8 @@ body {
   .header__title {
     margin: 0 auto;
     padding: 0 1em;
-    max-width: 20em;
-    font-family: "Open Sans Bold", sans-serif;
+    max-width: 18em;
+    font-family: "Clear Sans Bold", sans-serif;
     font-size: 32px;
     color: #ffffff;
     -webkit-transition-duration: 300ms;
@@ -641,7 +636,7 @@ body {
   border-radius: 5px;
   -webkit-box-shadow: 2px 3px 22px 2px rgba(0, 0, 0, 0.2);
           box-shadow: 2px 3px 22px 2px rgba(0, 0, 0, 0.2);
-  font-family: "Open Sans Bold", sans-serif;
+  font-family: "Clear Sans Bold", sans-serif;
   font-size: 18px;
   color: #ffffff;
   text-decoration: none;
@@ -690,7 +685,7 @@ body {
         margin-right: 0; } }
 
 .main__title {
-  font-family: "Open Sans Bold", sans-serif;
+  font-family: "Clear Sans Bold", sans-serif;
   font-size: 32px;
   -webkit-transition-duration: 300ms;
           transition-duration: 300ms; }
@@ -719,7 +714,7 @@ body {
     display: block;
     padding: 0.5em; }
   .step__title {
-    font-family: "Open Sans Bold", sans-serif;
+    font-family: "Clear Sans Bold", sans-serif;
     font-size: 20px; }
 
 .footer {
@@ -752,8 +747,8 @@ body {
   .footer__title {
     margin: 0 auto;
     padding: 5em 1em 2em 1em;
-    max-width: 20em;
-    font-family: "Open Sans Bold", sans-serif;
+    max-width: 18em;
+    font-family: "Clear Sans Bold", sans-serif;
     font-size: 32px;
     color: #ffffff;
     -webkit-transition-duration: 300ms;
