--- a/src/sass/helpers/_fonts.scss
+++ b/src/sass/helpers/_fonts.scss
@@ -1,13 +1,13 @@
 @font-face { 
   font-family: 'Open Sans Light'; 
-  src: url('../fonts/OpenSans-Light-webfont.woff') format('woff');
+  src: url('../fonts/OpenSans-Light.woff') format('woff');
   font-weight: normal; 
   font-style: normal; 
 }
 
 @font-face { 
-  font-family: 'Open Sans Bold'; 
-  src: url('../fonts/OpenSans-Bold-webfont.woff') format('woff');
+  font-family: 'Clear Sans Bold'; 
+  src: url('../fonts/ClearSans-Bold.woff') format('woff');
   font-weight: normal; 
   font-style: normal; 
 }
