--- a/src/templates/partial/_main.html
+++ b/src/templates/partial/_main.html
@@ -3,27 +3,27 @@
     <div class="main__help">
         <h2 class="main__title">How to open a high-risk merchant account</h2>
 
-        <figure class="step main__step">
+        <div class="step main__step">
             <img src="img/step_contact.svg" alt="Step 1" class="step__image">
-            <figcapture class="step__caption">
+            <div class="step__caption">
                 <h3 class="step__title">Contact Us</h3>
                 <p class="step__text">Fill out an application to have our experts review it and advise you on the appropriate banking partners from our large network.</p>
-            </figcapture>
-        </figure>
-        <figure class="step main__step">
+            </div>
+        </div>
+        <div class="step main__step">
             <img src="img/step_bank.svg" alt="Step 2" class="step__image">
-            <figcapture class="step__caption">
+            <div class="step__caption">
                 <h3 class="step__title">Contact the bank</h3>
                 <p class="step__text">Our experts will initiate the approval process at one of our trusted banks. Our team will support you along the way.</p>
-            </figcapture>
-        </figure>
-        <figure class="step main__step">
+            </div>
+        </div>
+        <div class="step main__step">
             <img src="img/step_integration.svg" alt="Step 3" class="step__image">
-            <figcapture class="step__caption">
+            <div class="step__caption">
                 <h3 class="step__title">Integration</h3>
                 <p class="step__text">Once the approval is received, activate the MID and start the payment gateway integration process to accept your first payment.</p>
-            </figcapture>
-        </figure>
+            </div>
+        </div>
 
     </div>
 
